--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,12 +19,12 @@
                 <li class="nav-item"><a class="nav-link" href="contact.html">Find Events</a></li>
                 <li class="nav-item"><a class="nav-link" href="pricing.html">Directory</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">More Options</a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
                         <li><a class="dropdown-item" th:href="@{/clients/news}">Create Client</a></li>
-                        <li><a class="dropdown-item" href="blog-home.html">Signin</a></li>
-                        <li><a class="dropdown-item" href="blog-home.html">Register</a></li>
-                        <li><a class="dropdown-item" href="blog-post.html">Logout</a></li>
+                        <li><a class="dropdown-item" th:href="@{/login}">Login</a></li>
+                        <li><a class="dropdown-item" th:href="@{/register}">Register</a></li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
                     </ul>
                 </li>
             </ul> 
