--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -35,7 +35,7 @@
         </style>
         <div class="main">
             <div class="col-md-6 col-sm-12">
-                <div th:if="${param.fail}" class="alert alert-success">
+                <div th:if="${param.fail}" class="alert alert-danger">
                     Username or email already exists</div>
                 <div class="login-form">
                     <form method="post" role="form" th:action="@{/register/save}" th:object="${user}">
@@ -66,8 +66,9 @@
                                     th:field="*{password}">
                         </div>
                         <p th:if="${#fields.hasErrors('password')}" class="text-danger"></p>
-                        <button th:href="@{/login}" type="submit" class="btn btn-black">Login here.</button>
-                        <button th:href="@{/register}" type="submit" class="btn btn-secondary">Register</button>
+                        <button type="submit" class="btn btn-secondary">Register</button>
+                         <!-- <button th:href="@{/login}" type="submit" class="btn btn-black">Login here.</button> -->
+                        <button th:href="@{/register}" type="submit" class="btn btn-secondary">Register</button> 
                     </form>
                 </div>
             </div>
