--- a/src/main/resources/templates/reportescore.html
+++ b/src/main/resources/templates/reportescore.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html 
     xmlns:th="http://thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="~{layout}">
-<head>
+<head> 
     <title>Reporte de Juegos</title>
 </head>
 <body class="d-flex flex-column">
@@ -17,18 +16,7 @@
             </div>
         </header>
         <div class="container">
-            <form action="/resultadocore2" method="get">
-                <div class="form-group">
-                    <label for="fechaInicio">Fecha Inicio</label>
-                    <input type="date" id="fechaInicio" name="fechaInicio" required>
-                </div>
-                <div class="form-group">
-                    <label for="fechaFin">Fecha Fin</label>
-                    <input type="date" id="fechaFin" name="fechaFin" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Generar Reporte</button>
-            </form>
-            <div class="row mt-4">
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="card mb-4">
                         <div class="card-body">
@@ -64,4 +52,3 @@
     </section>
 </body>
 </html>
-
